<resources>
    <string name="app_name">Rock, Paper, Scissors</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play</string>
    <string name="statistics">Your all time statistics \n Win: %1$d Draw: %2$d Lose: %3$d </string>
    <string name="result">Result</string>
    <string name="versus">V.S.</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="computer_wins">Computer wins!</string>
    <string name="you_win">You win!</string>
    <string name="draw">Draw</string>
</resources>
